# c-mapreduce-framework

./: CMakeLists.txt  README.md
src/: mapreduce.c  partition.c
